# signals

./: .gitignore  CLAUDE.md  LICENSE  MODERNIZATION-NOTES.md  README.md  Untitled.ipynb  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  notebooks-heavy.yml  notebooks-nightly.yml
Projects/GestureRecognizer/: Feature Selection and Hyperparameter Tuning.ipynb  GestureRecognizer-FeatureBased.ipynb
Projects/GestureRecognizer/ADXL335GestureLogs/Amelia/: At Rest_1557877157028_446.csv  At Rest_1557877165053_305.csv  At Rest_1557877173082_357.csv  At Rest_1557877180961_333.csv  At Rest_1557877187019_223.csv  Backhand Tennis_1557876983233_157.csv  (+51 more)
Projects/GestureRecognizer/gesturerec/: __init__.py  data.py  experiments.py  gesturestream.py  remove_methods.py  signalproc.py  utility.py  vis.py
Projects/StepTracker/: StepTracker-Exercises.ipynb  StepTracker-WithExampleSolution.ipynb  StepTracker.ipynb
Projects/StepTracker/Logs/: arduino_accel_lefthoodiepocket_3sets_15steps_nodelay_115200baud.csv  arduino_accel_lefthoodiepocket_3sets_15steps_nodelay_115200baud_subset.csv  arduino_accel_leftwrist2_3sets_15steps_delay10_9600baud.csv  arduino_accel_leftwrist3_3sets_15steps_delay10_9600baud.csv  arduino_accel_leftwrist_15steps_3hops_3halfspin_3touchceiling_thenshake_nodelay_115200.csv  arduino_accel_leftwrist_3sets_15steps_delay10_9600baud.csv  arduino_accel_leftwrist_3sets_15steps_leftwrist_nodelay_115200.csv  arduino_accel_righthoodiepocket_3sets_15steps_delay10_9600baud_subset.csv  arduino_accel_righthoodiepocket_3sets_15steps_nodelay_115200.csv  arduino_accel_righthoodiepocket_3sets_15stepst_delay10_9600baud.csv  arduino_accel_rightpocket2_2sets_15steps_delay10_9600baud.csv  arduino_accel_rightpocket_3sets_15steps_delay10_9600baud.csv
Tutorials/: IntroToMatplotlib.ipynb  IntroToNumPy.ipynb  IntroToPython.ipynb  IntroToSignalProcessing.ipynb  MyFirstNotebook.ipynb  Signals - Comparing Signals.ipynb
Tutorials/data/audio/: README.md
Tutorials/makelab/: README.md  __init__.py  audio.py  signal.py
tests/: test_gesturerec_data.py  test_gesturerec_experiments.py  test_gesturerec_signalproc.py  test_gesturerec_utility.py  test_makelab_audio.py  test_makelab_signal.py
tests/fixtures/TestGestures/: Midair Zorro _Z__3000_3.csv  Shake_1000_3.csv  Shake_2000_3.csv  armGestureData_fulldatastream_999_9.csv
(+2135 files in other folders)
